fix ratio on mobile and update asset

--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+video {
+  object-fit: fill;
+}
+
 
 .col-12 {
   padding: 0px;
@@ -379,6 +383,9 @@ textarea:focus {
 }
 
 @media only screen and (max-width: 766px) {
+  video{
+    height: auto;
+  }
     .product-detail-text {
         font-size: 24px;
         padding-right: 20px;
@@ -386,7 +393,7 @@ textarea:focus {
       }
   .img-sm {
     width: 100%;
-    height: 100%;
+    height: auto;
     margin-top: 30px;
   }
 
@@ -465,9 +472,9 @@ textarea:focus {
         padding-right: 5px;
    
       }
-    .row {
+    /* .row {
         margin-bottom: 80px;
-      }
+      } */
   .img-sm {
     width: 100%;
     height: auto;
@@ -588,4 +595,26 @@ textarea:focus {
   -ms-animation: rotating 2s linear infinite;
   -o-animation: rotating 2s linear infinite;
   animation: rotating 2s linear infinite;
+}
+
+
+*::-webkit-media-controls-panel {
+  display: none!important;
+  -webkit-appearance: none;
+}
+
+/* Old shadow dom for play button */
+
+*::-webkit-media-controls-play-button {
+  display: none!important;
+  -webkit-appearance: none;
+}
+
+/* New shadow dom for play button */
+
+/* This one works! */
+
+*::-webkit-media-controls-start-playback-button {
+  display: none!important;
+  -webkit-appearance: none;
 }
